@startuml
skinparam classAttributeIconSize 0
abstract class Modificador

class PuntuacionTirada {
    +{static}PuntuacionTirada(puntuacion: int,multiplicador: int)
    +modificarPuntos(modificador: Modificador): void
    +modificarMultiplicador(modificador: Modificador): void
    +obtenerPuntuacion(): int
    +obtenerMultiplicador(): int
    +obtenerPuntos(): int

}
class Puntos {
-valorPuntos: int
+{static}Puntos(puntos: int)
+modificar(modificador: Modificador): void
+multiplicarCon(unMultiplicador: Multiplicador): int
+obtenerPuntos(): int

}
class Multiplicador {
-valorMultiplicador: int
+{static}Multiplicador(multiplicador: int)
+modificar(modificador: Modificador): void
+multiplicarCon(valorPuntos: int): int
+obtenerMultiplicador(): int
}

PuntuacionTirada "1" --> "1" Puntos
PuntuacionTirada "1" --> "1" Multiplicador
PuntuacionTirada ..> Modificador: <<use>>

Puntos ..> Modificador: <<use>>
Puntos ..> Multiplicador: <<use>>

Multiplicador ..> Modificador: <<use>>

@enduml